	PR tree-optimization/28839 	* tree-into-ssa.c (prune_unused_phi_nodes): Take into account kills in 	blocks in that phi arguments appear.

* gcc.dg/pr28839.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116605 138bc75d-0d04-0410-961f-82ee72b054a4